actualizado con tipos de datos en negrita y con descripcion

--- a/Plantilla.ipynb
+++ b/Plantilla.ipynb
@@ -355,13 +355,13 @@
     "\n",
     "Estas son las variables por entrada que contiene este dataset\n",
     "\n",
-    "Book_Title =  \n",
-    "Original_Book_Title =\n",
-    "Author_Name =\n",
-    "Edition_Language =\n",
-    "Book_Description = \n",
-    "Genres =\n",
-    "url =\n",
+    "#### -<b>Book_Title</b> =  título del libro\n",
+    "#### -<b>Original_Book_Title</b> = título original del libro\n",
+    "#### -<b>Author_Name</b> = nombre del autor\n",
+    "#### -<b>Edition_Language</b> = lenguaje editado\n",
+    "#### -<b>Book_Description</b> =  descripción del libro\n",
+    "#### -<b>Genres</b> = genero\n",
+    "#### -<b>url</b> = fuente dirección web del libro\n",
     "\n",
     "\n"
    ]
@@ -903,17 +903,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "id": "27481999-7baa-4280-8895-ad5aaf6a2ebb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0xfa89355fa0>"
+       "<seaborn.axisgrid.FacetGrid at 0xfa99e764c0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "ef413997-d6fb-43f4-883f-76008850f55c",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1064,7 @@
        "Spanish               3.896667  30233.666667    1564.000000     2001.000000"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
