añadido autores con mayor interes y score

--- a/Plantilla.ipynb
+++ b/Plantilla.ipynb
@@ -1099,6 +1099,345 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "63c3970f-33a6-489a-b21b-0f4cb352c68a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Book_Title</th>\n",
+       "      <th>Original_Book_Title</th>\n",
+       "      <th>Author_Name</th>\n",
+       "      <th>Edition_Language</th>\n",
+       "      <th>Rating_score</th>\n",
+       "      <th>Rating_votes</th>\n",
+       "      <th>Review_number</th>\n",
+       "      <th>Book_Description</th>\n",
+       "      <th>Year_published</th>\n",
+       "      <th>Genres</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>979</th>\n",
+       "      <td>Donavan: From Michael Bunker's World of \"PENNS...</td>\n",
+       "      <td>B00NGANDX2</td>\n",
+       "      <td>D.K. Cassidy</td>\n",
+       "      <td>English</td>\n",
+       "      <td>4.82</td>\n",
+       "      <td>76</td>\n",
+       "      <td>28</td>\n",
+       "      <td>In Michael Bunker's “Pennsylvania”, we briefly...</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>{'Science Fiction': 8, 'Short Stories': 4, 'Sc...</td>\n",
+       "      <td>https://www.goodreads.com/book/show/23202487-d...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1132</th>\n",
+       "      <td>Down In A Hole (Drugs &amp; Wires, #1</td>\n",
+       "      <td>Drugs &amp; Wires</td>\n",
+       "      <td>Mary Safro</td>\n",
+       "      <td>English</td>\n",
+       "      <td>4.71</td>\n",
+       "      <td>24</td>\n",
+       "      <td>4</td>\n",
+       "      <td>The year is 1995, and everything's gone wrong ...</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>{'Sequential Art (Graphic Novels) ': 5, 'Seque...</td>\n",
+       "      <td>https://www.goodreads.com/book/show/42388656-d...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400</th>\n",
+       "      <td>Transmetropolitan V. 0-10</td>\n",
+       "      <td>Transmetropolitan V. 0-10</td>\n",
+       "      <td>Warren Ellis</td>\n",
+       "      <td>English</td>\n",
+       "      <td>4.67</td>\n",
+       "      <td>1879</td>\n",
+       "      <td>91</td>\n",
+       "      <td>On a quest for well written comics, I was turn...</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>{'Sequential Art (Comics) ': 131, 'Sequential ...</td>\n",
+       "      <td>https://www.goodreads.com/book/show/1188083.Tr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1205</th>\n",
+       "      <td>Clean &amp; Sober Living</td>\n",
+       "      <td>English</td>\n",
+       "      <td>Cryoclaire</td>\n",
+       "      <td>English</td>\n",
+       "      <td>4.63</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>The year is 1995, and everything's gone wrong ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>{'Sequential Art (Webcomic) ': 3, 'Science Fic...</td>\n",
+       "      <td>https://www.goodreads.com/book/show/29056850-c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1144</th>\n",
+       "      <td>A.I. Confidential</td>\n",
+       "      <td>B078C6RQ25</td>\n",
+       "      <td>Austin Dragon</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4.62</td>\n",
+       "      <td>21</td>\n",
+       "      <td>3</td>\n",
+       "      <td>“We’re going to break wide open the biggest c...</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>{'Science Fiction (Cyberpunk) ': 3, 'Mystery': 2}</td>\n",
+       "      <td>https://www.goodreads.com/book/show/36840156-a...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             Book_Title  \\\n",
+       "979   Donavan: From Michael Bunker's World of \"PENNS...   \n",
+       "1132                  Down In A Hole (Drugs & Wires, #1   \n",
+       "400                           Transmetropolitan V. 0-10   \n",
+       "1205                               Clean & Sober Living   \n",
+       "1144                                  A.I. Confidential   \n",
+       "\n",
+       "            Original_Book_Title    Author_Name Edition_Language  Rating_score  \\\n",
+       "979                  B00NGANDX2   D.K. Cassidy          English          4.82   \n",
+       "1132              Drugs & Wires     Mary Safro          English          4.71   \n",
+       "400   Transmetropolitan V. 0-10   Warren Ellis          English          4.67   \n",
+       "1205                    English     Cryoclaire          English          4.63   \n",
+       "1144                 B078C6RQ25  Austin Dragon             None          4.62   \n",
+       "\n",
+       "      Rating_votes  Review_number  \\\n",
+       "979             76             28   \n",
+       "1132            24              4   \n",
+       "400           1879             91   \n",
+       "1205            24              2   \n",
+       "1144            21              3   \n",
+       "\n",
+       "                                       Book_Description  Year_published  \\\n",
+       "979   In Michael Bunker's “Pennsylvania”, we briefly...            2014   \n",
+       "1132  The year is 1995, and everything's gone wrong ...            2018   \n",
+       "400   On a quest for well written comics, I was turn...            2007   \n",
+       "1205  The year is 1995, and everything's gone wrong ...               0   \n",
+       "1144   “We’re going to break wide open the biggest c...            2017   \n",
+       "\n",
+       "                                                 Genres  \\\n",
+       "979   {'Science Fiction': 8, 'Short Stories': 4, 'Sc...   \n",
+       "1132  {'Sequential Art (Graphic Novels) ': 5, 'Seque...   \n",
+       "400   {'Sequential Art (Comics) ': 131, 'Sequential ...   \n",
+       "1205  {'Sequential Art (Webcomic) ': 3, 'Science Fic...   \n",
+       "1144  {'Science Fiction (Cyberpunk) ': 3, 'Mystery': 2}   \n",
+       "\n",
+       "                                                    url  \n",
+       "979   https://www.goodreads.com/book/show/23202487-d...  \n",
+       "1132  https://www.goodreads.com/book/show/42388656-d...  \n",
+       "400   https://www.goodreads.com/book/show/1188083.Tr...  \n",
+       "1205  https://www.goodreads.com/book/show/29056850-c...  \n",
+       "1144  https://www.goodreads.com/book/show/36840156-a...  "
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values(by = 'Rating_score', ascending = False ).head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ded4645-37a4-40f6-8c37-61d9fd19b4f6",
+   "metadata": {},
+   "source": [
+    "## Clasificamos de mayor a menor a los autores con mejor rating score  y con mayor número de votos\n",
+    "### -Tenemos en cuenta el ínteres del pubico "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "699da246-1cde-4696-8a7c-46a0a5353d54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Book_Title</th>\n",
+       "      <th>Original_Book_Title</th>\n",
+       "      <th>Author_Name</th>\n",
+       "      <th>Edition_Language</th>\n",
+       "      <th>Rating_score</th>\n",
+       "      <th>Rating_votes</th>\n",
+       "      <th>Review_number</th>\n",
+       "      <th>Book_Description</th>\n",
+       "      <th>Year_published</th>\n",
+       "      <th>Genres</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>Marissa Meyer</td>\n",
+       "      <td>English</td>\n",
+       "      <td>4.43</td>\n",
+       "      <td>205886</td>\n",
+       "      <td>25208</td>\n",
+       "      <td>Princess Winter is admired for her grace, kind...</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>{'Fantasy': 5270, 'Young Adult': 5010, 'Scienc...</td>\n",
+       "      <td>https://www.goodreads.com/book/show/13206900-w...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>Cress</td>\n",
+       "      <td>Cress</td>\n",
+       "      <td>Marissa Meyer</td>\n",
+       "      <td>English</td>\n",
+       "      <td>4.42</td>\n",
+       "      <td>287668</td>\n",
+       "      <td>27145</td>\n",
+       "      <td>In this third book in the Lunar Chronicles, Ci...</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>{'Young Adult': 6109, 'Fantasy': 5838, 'Scienc...</td>\n",
+       "      <td>https://www.goodreads.com/book/show/13206828-c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>647</th>\n",
+       "      <td>Watchmen</td>\n",
+       "      <td>Watchmen</td>\n",
+       "      <td>Alan Moore</td>\n",
+       "      <td>English</td>\n",
+       "      <td>4.36</td>\n",
+       "      <td>494672</td>\n",
+       "      <td>14459</td>\n",
+       "      <td>This Hugo Award-winning graphic novel chronicl...</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>{'Sequential Art (Graphic Novels) ': 9748, 'Se...</td>\n",
+       "      <td>https://www.goodreads.com/book/show/472331.Wat...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>700</th>\n",
+       "      <td>Caliban's War</td>\n",
+       "      <td>Caliban's War</td>\n",
+       "      <td>James S.A. Corey</td>\n",
+       "      <td>English</td>\n",
+       "      <td>4.34</td>\n",
+       "      <td>102557</td>\n",
+       "      <td>5808</td>\n",
+       "      <td>We are not alone.On Ganymede, breadbasket of t...</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>{'Science Fiction': 3129, 'Fiction': 976, 'Spa...</td>\n",
+       "      <td>https://www.goodreads.com/book/show/12591698-c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>760</th>\n",
+       "      <td>The Hunger Games</td>\n",
+       "      <td>The Hunger Games</td>\n",
+       "      <td>Suzanne Collins</td>\n",
+       "      <td>English</td>\n",
+       "      <td>4.33</td>\n",
+       "      <td>6572148</td>\n",
+       "      <td>174079</td>\n",
+       "      <td>Could you survive on your own in the wild, wit...</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>{'Young Adult': 31089, 'Fiction': 17571, 'Scie...</td>\n",
+       "      <td>https://www.goodreads.com/book/show/2767052-th...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Book_Title Original_Book_Title       Author_Name Edition_Language  \\\n",
+       "165            Winter              Winter     Marissa Meyer          English   \n",
+       "125             Cress               Cress     Marissa Meyer          English   \n",
+       "647          Watchmen            Watchmen        Alan Moore          English   \n",
+       "700     Caliban's War       Caliban's War  James S.A. Corey          English   \n",
+       "760  The Hunger Games    The Hunger Games   Suzanne Collins          English   \n",
+       "\n",
+       "     Rating_score  Rating_votes  Review_number  \\\n",
+       "165          4.43        205886          25208   \n",
+       "125          4.42        287668          27145   \n",
+       "647          4.36        494672          14459   \n",
+       "700          4.34        102557           5808   \n",
+       "760          4.33       6572148         174079   \n",
+       "\n",
+       "                                      Book_Description  Year_published  \\\n",
+       "165  Princess Winter is admired for her grace, kind...            2015   \n",
+       "125  In this third book in the Lunar Chronicles, Ci...            2014   \n",
+       "647  This Hugo Award-winning graphic novel chronicl...            1987   \n",
+       "700  We are not alone.On Ganymede, breadbasket of t...            2012   \n",
+       "760  Could you survive on your own in the wild, wit...            2008   \n",
+       "\n",
+       "                                                Genres  \\\n",
+       "165  {'Fantasy': 5270, 'Young Adult': 5010, 'Scienc...   \n",
+       "125  {'Young Adult': 6109, 'Fantasy': 5838, 'Scienc...   \n",
+       "647  {'Sequential Art (Graphic Novels) ': 9748, 'Se...   \n",
+       "700  {'Science Fiction': 3129, 'Fiction': 976, 'Spa...   \n",
+       "760  {'Young Adult': 31089, 'Fiction': 17571, 'Scie...   \n",
+       "\n",
+       "                                                   url  \n",
+       "165  https://www.goodreads.com/book/show/13206900-w...  \n",
+       "125  https://www.goodreads.com/book/show/13206828-c...  \n",
+       "647  https://www.goodreads.com/book/show/472331.Wat...  \n",
+       "700  https://www.goodreads.com/book/show/12591698-c...  \n",
+       "760  https://www.goodreads.com/book/show/2767052-th...  "
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filt_score = df[df['Rating_votes'] > 100000]\n",
+    "filt_score.sort_values(by = 'Rating_score', ascending = False ).head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c7025c72-d936-4991-be29-f72b9f95b1ed",
    "metadata": {},
