añadido comentarios: pongo libros en vez de autores con mayor interes y score

--- a/Plantilla.ipynb
+++ b/Plantilla.ipynb
@@ -1099,8 +1099,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "75b77313-576b-4da9-ba80-7503732fcd68",
+   "metadata": {},
+   "source": [
+    "## Los libros mejor valorados"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 84,
    "id": "63c3970f-33a6-489a-b21b-0f4cb352c68a",
    "metadata": {},
    "outputs": [
@@ -1257,7 +1265,7 @@
        "1144  https://www.goodreads.com/book/show/36840156-a...  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,8 +1279,8 @@
    "id": "6ded4645-37a4-40f6-8c37-61d9fd19b4f6",
    "metadata": {},
    "source": [
-    "## Clasificamos de mayor a menor a los autores con mejor rating score  y con mayor número de votos\n",
-    "### -Tenemos en cuenta el ínteres del pubico "
+    "## Clasificamos de mayor a menor a los libros con mejor rating score  y con mayor número de votos\n",
+    "### -Tenemos en cuenta el ínteres del público "
    ]
   },
   {
